[package]
name = "reventor"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
regex = "1.10"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = "0.11" 